Fixed styling The carousel now shows the correct card with the content properly aligned.

--- a/iTrendz.MauiUI/wwwroot/css/app.css
+++ b/iTrendz.MauiUI/wwwroot/css/app.css
@@ -2,11 +2,6 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 100%;
-}
-
-#app {
-    height: 100%;
 }
 
 a, .btn-link {
